// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When Testing User Navigation Components:  <UserTabBar />:  should render correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenNavigationContainer
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RNSScreen
      activityState={2}
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          [
            {
              "backgroundColor": "rgb(242, 242, 242)",
              "flex": 1,
            },
            [
              {
                "flex": 1,
                "flexDirection": "column-reverse",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text>
            test component
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              [
                {
                  "gap": 5,
                  "justifyContent": "center",
                  "paddingBottom": 5,
                  "paddingHorizontal": 20,
                },
                {
                  "backgroundColor": "#181818",
                  "paddingTop": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_400Regular",
                    "fontSize": 12,
                  },
                  {
                    "color": "#FFF",
                  },
                ]
              }
              testID="greeting text"
            >
              Good morning
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 25,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#141414",
                      },
                    ]
                  }
                >
                  <RCTImageView
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    internal_analyticTag={null}
                    resizeMode="cover"
                    source={
                      [
                        {
                          "uri": "123",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 25,
                        "height": 40,
                        "overflow": "hidden",
                        "width": 40,
                      }
                    }
                    testID="user image"
                  />
                </View>
                <Text
                  style={
                    [
                      {
                        "fontFamily": "Inter_700Bold",
                        "fontSize": 18,
                      },
                      {
                        "color": "#FFF",
                      },
                    ]
                  }
                >
                  John Doe
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 15,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="theme toggle"
                >
                  <RCTImageView
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    internal_analyticTag={null}
                    resizeMode="cover"
                    source={
                      [
                        {
                          "uri": "image",
                        },
                      ]
                    }
                    style={
                      {
                        "height": 30,
                        "overflow": "hidden",
                        "width": 30,
                      }
                    }
                  />
                </View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="cart button"
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenNavigationContainer>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
          "paddingTop": 20,
        },
        {
          "backgroundColor": "#000",
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Home tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#5BCF5F",
            },
          ]
        }
      >
        Home
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Vendors tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#FFF",
            },
          ]
        }
      >
        Vendors
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="My Orders tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#FFF",
            },
          ]
        }
      >
        My Orders
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Profile tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#FFF",
            },
          ]
        }
      >
        Profile
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`When Testing User Navigation Components:  <UserTabBar />:  should render correctly on android 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenNavigationContainer
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RNSScreen
      activityState={2}
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          [
            {
              "backgroundColor": "rgb(242, 242, 242)",
              "flex": 1,
            },
            [
              {
                "flex": 1,
                "flexDirection": "column-reverse",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text>
            test component
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              [
                {
                  "gap": 5,
                  "justifyContent": "center",
                  "paddingBottom": 5,
                  "paddingHorizontal": 20,
                },
                {
                  "backgroundColor": "#181818",
                  "paddingTop": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_400Regular",
                    "fontSize": 12,
                  },
                  {
                    "color": "#FFF",
                  },
                ]
              }
              testID="greeting text"
            >
              Good morning
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 25,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#141414",
                      },
                    ]
                  }
                >
                  <RCTImageView
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    internal_analyticTag={null}
                    resizeMode="cover"
                    source={
                      [
                        {
                          "uri": "123",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 25,
                        "height": 40,
                        "overflow": "hidden",
                        "width": 40,
                      }
                    }
                    testID="user image"
                  />
                </View>
                <Text
                  style={
                    [
                      {
                        "fontFamily": "Inter_700Bold",
                        "fontSize": 18,
                      },
                      {
                        "color": "#FFF",
                      },
                    ]
                  }
                >
                  John Doe
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 15,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="theme toggle"
                >
                  <RCTImageView
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    internal_analyticTag={null}
                    resizeMode="cover"
                    source={
                      [
                        {
                          "uri": "image",
                        },
                      ]
                    }
                    style={
                      {
                        "height": 30,
                        "overflow": "hidden",
                        "width": 30,
                      }
                    }
                  />
                </View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="cart button"
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenNavigationContainer>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
          "paddingTop": 20,
        },
        {
          "backgroundColor": "#000",
          "paddingBottom": 15,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Home tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#5BCF5F",
            },
          ]
        }
      >
        Home
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Vendors tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#FFF",
            },
          ]
        }
      >
        Vendors
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="My Orders tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#FFF",
            },
          ]
        }
      >
        My Orders
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Profile tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#FFF",
            },
          ]
        }
      >
        Profile
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`When Testing User Navigation Components:  <UserTabHeader />:  should render correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenNavigationContainer
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RNSScreen
      activityState={2}
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          [
            {
              "backgroundColor": "rgb(242, 242, 242)",
              "flex": 1,
            },
            [
              {
                "flex": 1,
                "flexDirection": "column-reverse",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text>
            test component
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              [
                {
                  "gap": 5,
                  "justifyContent": "center",
                  "paddingBottom": 5,
                  "paddingHorizontal": 20,
                },
                {
                  "backgroundColor": "#FFF",
                  "paddingTop": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_400Regular",
                    "fontSize": 12,
                  },
                  {
                    "color": "#000",
                  },
                ]
              }
              testID="greeting text"
            >
              Good morning
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 25,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#F0FFF0",
                      },
                    ]
                  }
                >
                  <RCTImageView
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    internal_analyticTag={null}
                    resizeMode="cover"
                    source={
                      [
                        {
                          "uri": "123",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 25,
                        "height": 40,
                        "overflow": "hidden",
                        "width": 40,
                      }
                    }
                    testID="user image"
                  />
                </View>
                <Text
                  style={
                    [
                      {
                        "fontFamily": "Inter_700Bold",
                        "fontSize": 18,
                      },
                      {
                        "color": "#000",
                      },
                    ]
                  }
                >
                  John Doe
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 15,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="theme toggle"
                >
                  <RCTImageView
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    internal_analyticTag={null}
                    resizeMode="cover"
                    source={
                      [
                        {
                          "uri": "image",
                        },
                      ]
                    }
                    style={
                      {
                        "height": 30,
                        "overflow": "hidden",
                        "width": 30,
                      }
                    }
                  />
                </View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="cart button"
                >
                  <View />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenNavigationContainer>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
          "paddingTop": 20,
        },
        {
          "backgroundColor": "#F5F5F5",
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Home tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#4CAF50",
            },
          ]
        }
      >
        Home
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Vendors tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Vendors
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="My Orders tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        My Orders
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Profile tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Profile
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`When Testing Vendor Navigation Component:  <VendorTabBar />:  should render correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenNavigationContainer
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RNSScreen
      activityState={2}
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          [
            {
              "backgroundColor": "rgb(242, 242, 242)",
              "flex": 1,
            },
            [
              {
                "flex": 1,
                "flexDirection": "column-reverse",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text>
            test component
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              [
                {
                  "gap": 5,
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 20,
                },
                {
                  "paddingTop": 20,
                },
              ]
            }
          >
            <RCTImageView
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              internal_analyticTag={null}
              resizeMode="cover"
              source={
                [
                  {
                    "height": undefined,
                    "uri": undefined,
                    "width": undefined,
                  },
                ]
              }
              style={
                {
                  "bottom": 0,
                  "height": undefined,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": undefined,
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 20,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F0FFF0",
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 30,
                  }
                }
                testID="vendor name"
              >
                Salado Cafeteria
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#F0FFF0",
                        "borderRadius": 20,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#F0FFF0",
                      },
                    ]
                  }
                  testID="notification button"
                >
                  <View />
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#E93223",
                        "borderRadius": 9,
                        "height": 18,
                        "justifyContent": "center",
                        "position": "absolute",
                        "right": -4,
                        "top": -4,
                        "width": 18,
                      }
                    }
                    testID="quantity badge"
                  >
                    <Text
                      style={
                        {
                          "color": "#fff",
                          "fontFamily": "Inter_600SemiBold",
                          "fontSize": 12,
                        }
                      }
                    >
                      6
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              animatedStyle={
                {
                  "value": {
                    "width": "20%",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFF",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "gap": 15,
                  "justifyContent": "space-between",
                  "padding": 5,
                  "width": "20%",
                }
              }
              testID="order bar"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "padding": 8,
                    },
                    {
                      "backgroundColor": "#4CAF50",
                    },
                  ]
                }
              >
                <Text
                  style={
                    {
                      "color": "#fff",
                      "fontFamily": "Inter_500Medium",
                      "fontSize": 14,
                    }
                  }
                  testID="new orders"
                >
                  30
                </Text>
              </View>
              <Text
                animatedStyle={
                  {
                    "value": {
                      "display": "none",
                      "opacity": 0,
                    },
                  }
                }
                collapsable={false}
                style={
                  {
                    "color": "#000",
                    "display": "none",
                    "flex": 1,
                    "fontFamily": "Inter_600SemiBold",
                    "fontSize": 14,
                    "opacity": 0,
                  }
                }
                testID="order type"
              >
                New Orders
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  animatedStyle={
                    {
                      "value": {
                        "display": "none",
                        "opacity": 0,
                      },
                    }
                  }
                  collapsable={false}
                  style={
                    {
                      "color": "#000",
                      "display": "none",
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 12,
                      "opacity": 0,
                    }
                  }
                  testID="order cta"
                >
                  Manage Orders
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderColor": "#BCB5B5",
                      "borderRadius": 13,
                      "borderWidth": 1,
                      "height": 25,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 25,
                    }
                  }
                  testID="to orders"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#000",
                          "fontSize": 16,
                        },
                        {
                          "left": 1,
                        },
                        {
                          "fontFamily": "FontAwesome",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenNavigationContainer>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
          "paddingTop": 20,
        },
        {
          "backgroundColor": "#F5F5F5",
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Home tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#4CAF50",
            },
          ]
        }
      >
        Home
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Orders tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Orders
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Menu tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Menu
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Account tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Account
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`When Testing Vendor Navigation Component:  <VendorTabBar />:  should render correctly on android 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenNavigationContainer
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RNSScreen
      activityState={2}
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          [
            {
              "backgroundColor": "rgb(242, 242, 242)",
              "flex": 1,
            },
            [
              {
                "flex": 1,
                "flexDirection": "column-reverse",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text>
            test component
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              [
                {
                  "gap": 5,
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 20,
                },
                {
                  "paddingTop": 20,
                },
              ]
            }
          >
            <RCTImageView
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              internal_analyticTag={null}
              resizeMode="cover"
              source={
                [
                  {
                    "height": undefined,
                    "uri": undefined,
                    "width": undefined,
                  },
                ]
              }
              style={
                {
                  "bottom": 0,
                  "height": undefined,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": undefined,
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 20,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F0FFF0",
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 30,
                  }
                }
                testID="vendor name"
              >
                Salado Cafeteria
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#F0FFF0",
                        "borderRadius": 20,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#F0FFF0",
                      },
                    ]
                  }
                  testID="notification button"
                >
                  <View />
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#E93223",
                        "borderRadius": 9,
                        "height": 18,
                        "justifyContent": "center",
                        "position": "absolute",
                        "right": -4,
                        "top": -4,
                        "width": 18,
                      }
                    }
                    testID="quantity badge"
                  >
                    <Text
                      style={
                        {
                          "color": "#fff",
                          "fontFamily": "Inter_600SemiBold",
                          "fontSize": 12,
                        }
                      }
                    >
                      6
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              animatedStyle={
                {
                  "value": {
                    "width": "20%",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFF",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "gap": 15,
                  "justifyContent": "space-between",
                  "padding": 5,
                  "width": "20%",
                }
              }
              testID="order bar"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "padding": 8,
                    },
                    {
                      "backgroundColor": "#4CAF50",
                    },
                  ]
                }
              >
                <Text
                  style={
                    {
                      "color": "#fff",
                      "fontFamily": "Inter_500Medium",
                      "fontSize": 14,
                    }
                  }
                  testID="new orders"
                >
                  30
                </Text>
              </View>
              <Text
                animatedStyle={
                  {
                    "value": {
                      "display": "none",
                      "opacity": 0,
                    },
                  }
                }
                collapsable={false}
                style={
                  {
                    "color": "#000",
                    "display": "none",
                    "flex": 1,
                    "fontFamily": "Inter_600SemiBold",
                    "fontSize": 14,
                    "opacity": 0,
                  }
                }
                testID="order type"
              >
                New Orders
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  animatedStyle={
                    {
                      "value": {
                        "display": "none",
                        "opacity": 0,
                      },
                    }
                  }
                  collapsable={false}
                  style={
                    {
                      "color": "#000",
                      "display": "none",
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 12,
                      "opacity": 0,
                    }
                  }
                  testID="order cta"
                >
                  Manage Orders
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderColor": "#BCB5B5",
                      "borderRadius": 13,
                      "borderWidth": 1,
                      "height": 25,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 25,
                    }
                  }
                  testID="to orders"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#000",
                          "fontSize": 16,
                        },
                        {
                          "left": 1,
                        },
                        {
                          "fontFamily": "FontAwesome",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenNavigationContainer>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
          "paddingTop": 20,
        },
        {
          "backgroundColor": "#F5F5F5",
          "paddingBottom": 15,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Home tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#4CAF50",
            },
          ]
        }
      >
        Home
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Orders tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Orders
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Menu tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Menu
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Account tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Account
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`When Testing Vendor Navigation Component:  <VendorTabHeader />:  should render correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenNavigationContainer
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RNSScreen
      activityState={2}
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          [
            {
              "backgroundColor": "rgb(242, 242, 242)",
              "flex": 1,
            },
            [
              {
                "flex": 1,
                "flexDirection": "column-reverse",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text>
            test component
          </Text>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              [
                {
                  "gap": 5,
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 20,
                },
                {
                  "paddingTop": 20,
                },
              ]
            }
          >
            <RCTImageView
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              internal_analyticTag={null}
              resizeMode="cover"
              source={
                [
                  {
                    "height": undefined,
                    "uri": undefined,
                    "width": undefined,
                  },
                ]
              }
              style={
                {
                  "bottom": 0,
                  "height": undefined,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": undefined,
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 20,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F0FFF0",
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 30,
                  }
                }
                testID="vendor name"
              >
                Salado Cafeteria
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#F0FFF0",
                        "borderRadius": 20,
                        "height": 40,
                        "justifyContent": "center",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#F0FFF0",
                      },
                    ]
                  }
                  testID="notification button"
                >
                  <View />
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#E93223",
                        "borderRadius": 9,
                        "height": 18,
                        "justifyContent": "center",
                        "position": "absolute",
                        "right": -4,
                        "top": -4,
                        "width": 18,
                      }
                    }
                    testID="quantity badge"
                  >
                    <Text
                      style={
                        {
                          "color": "#fff",
                          "fontFamily": "Inter_600SemiBold",
                          "fontSize": 12,
                        }
                      }
                    >
                      6
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              animatedStyle={
                {
                  "value": {
                    "width": "20%",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFF",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "gap": 15,
                  "justifyContent": "space-between",
                  "padding": 5,
                  "width": "20%",
                }
              }
              testID="order bar"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "padding": 8,
                    },
                    {
                      "backgroundColor": "#4CAF50",
                    },
                  ]
                }
              >
                <Text
                  style={
                    {
                      "color": "#fff",
                      "fontFamily": "Inter_500Medium",
                      "fontSize": 14,
                    }
                  }
                  testID="new orders"
                >
                  30
                </Text>
              </View>
              <Text
                animatedStyle={
                  {
                    "value": {
                      "display": "none",
                      "opacity": 0,
                    },
                  }
                }
                collapsable={false}
                style={
                  {
                    "color": "#000",
                    "display": "none",
                    "flex": 1,
                    "fontFamily": "Inter_600SemiBold",
                    "fontSize": 14,
                    "opacity": 0,
                  }
                }
                testID="order type"
              >
                New Orders
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  animatedStyle={
                    {
                      "value": {
                        "display": "none",
                        "opacity": 0,
                      },
                    }
                  }
                  collapsable={false}
                  style={
                    {
                      "color": "#000",
                      "display": "none",
                      "fontFamily": "Inter_400Regular",
                      "fontSize": 12,
                      "opacity": 0,
                    }
                  }
                  testID="order cta"
                >
                  Manage Orders
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderColor": "#BCB5B5",
                      "borderRadius": 13,
                      "borderWidth": 1,
                      "height": 25,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 25,
                    }
                  }
                  testID="to orders"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#000",
                          "fontSize": 16,
                        },
                        {
                          "left": 1,
                        },
                        {
                          "fontFamily": "FontAwesome",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenNavigationContainer>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
          "paddingTop": 20,
        },
        {
          "backgroundColor": "#F5F5F5",
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Home tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#4CAF50",
            },
          ]
        }
      >
        Home
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Orders tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Orders
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Menu tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Menu
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "gap": 5,
          "height": 32,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="Account tab button"
    >
      <View>
        <View />
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Account
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
